[project]
name = "spotopt"
version = "0.1.0"
description = "spotopt: A Python library for converting deterministic forecasts into probabilistic ones."
readme = "README.md"
authors = [
    { name = "Raik Becker"}
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.0",
    "pytz>=2025.0",
    "scikit-learn>=1.6.0",
]
license = "MIT"
keywords = ["forecasting", "probabilistic", "quantile-regression"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
repository = "https://github.com/spotopt/spotopt-probabilistic"
homepage = "https://github.com/spotopt/spotopt-probabilistic"
documentation = "https://github.com/spotopt/spotopt-probabilistic#readme"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["src"]


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.8",
    "ty>=0.0.9",
]
